src/syntax.output
语法

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier error SEMI

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag

   14 OptTag: ID
   15       | %empty

   16 Tag: ID

   17 VarDec: ID
   18       | VarDec LB INT RB

   19 FunDec: ID LP VarList RP
   20       | ID LP RP

   21 VarList: ParamDec COMMA VarList
   22        | ParamDec

   23 ParamDec: Specifier VarDec

   24 CompSt: LC DefList StmtList RC

   25 StmtList: Stmt StmtList
   26         | %empty

   27 Stmt: Exp SEMI
   28     | CompSt
   29     | RETURN Exp SEMI
   30     | IF LP Exp RP Stmt
   31     | IF LP Exp RP Stmt ELSE Stmt
   32     | WHILE LP Exp RP Stmt
   33     | error SEMI

   34 DefList: Def DefList
   35        | %empty

   36 Def: Specifier DecList SEMI
   37    | Specifier error SEMI

   38 DecList: Dec
   39        | Dec COMMA DecList

   40 Dec: VarDec
   41    | VarDec ASSIGNOP Exp

   42 Exp: Exp ASSIGNOP Exp
   43    | Exp AND Exp
   44    | Exp OR Exp
   45    | Exp RELOP Exp
   46    | Exp PLUS Exp
   47    | Exp MINUS Exp
   48    | Exp STAR Exp
   49    | Exp DIV Exp
   50    | LP Exp RP
   51    | MINUS Exp
   52    | NOT Exp
   53    | ID LP Args RP
   54    | ID LP RP
   55    | Exp LB Exp RB
   56    | Exp DOT ID
   57    | ID
   58    | INT
   59    | FLOAT

   60 Args: Exp COMMA Args
   61     | Exp
   62     | error COMMA


Terminals, with rules where they appear

$end (0) 0
error (256) 7 33 37 62
TYPE (258) 10
INT (259) 18 58
FLOAT (260) 59
ID (261) 14 16 17 19 20 53 54 56 57
SEMI (262) 4 5 7 27 29 33 36 37
COMMA (263) 9 21 39 60 62
AND (264) 43
OR (265) 44
ASSIGNOP (266) 41 42
RELOP (267) 45
DOT (268) 56
NOT (269) 52
PLUS (270) 46
MINUS (271) 47 51
STAR (272) 48
DIV (273) 49
LP (274) 19 20 30 31 32 50 53 54
RP (275) 19 20 30 31 32 50 53 54
LB (276) 18 55
RB (277) 18 55
LC (278) 12 24
RC (279) 12 24
STRUCT (280) 12 13
RETURN (281) 29
IF (282) 30 31
ELSE (283) 31
WHILE (284) 32
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    左： 0
Program (32)
    左： 1, 右： 0
ExtDefList (33)
    左： 2 3, 右： 1 2
ExtDef (34)
    左： 4 5 6 7, 右： 2
ExtDecList (35)
    左： 8 9, 右： 4 9
Specifier (36)
    左： 10 11, 右： 4 5 6 7 23 36 37
StructSpecifier (37)
    左： 12 13, 右： 11
OptTag (38)
    左： 14 15, 右： 12
Tag (39)
    左： 16, 右： 13
VarDec (40)
    左： 17 18, 右： 8 9 18 23 40 41
FunDec (41)
    左： 19 20, 右： 6
VarList (42)
    左： 21 22, 右： 19 21
ParamDec (43)
    左： 23, 右： 21 22
CompSt (44)
    左： 24, 右： 6 28
StmtList (45)
    左： 25 26, 右： 24 25
Stmt (46)
    左： 27 28 29 30 31 32 33, 右： 25 30 31 32
DefList (47)
    左： 34 35, 右： 12 24 34
Def (48)
    左： 36 37, 右： 34
DecList (49)
    左： 38 39, 右： 36 39
Dec (50)
    左： 40 41, 右： 38 39
Exp (51)
    左： 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59, 右：
    27 29 30 31 32 41 42 43 44 45 46 47 48 49 50 51 52 55 56 60 61
Args (52)
    左： 60 61 62, 右： 53 60


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          转到状态 3
    ExtDefList       转到状态 4
    ExtDef           转到状态 5
    Specifier        转到状态 6
    StructSpecifier  转到状态 7


State 1

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 2

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 15 (OptTag)

    OptTag  转到状态 9
    Tag     转到状态 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       转到状态 12
    ExtDef           转到状态 5
    Specifier        转到状态 6
    StructSpecifier  转到状态 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . error SEMI

    error  shift, and go to state 13
    ID     shift, and go to state 14
    SEMI   shift, and go to state 15

    ExtDecList  转到状态 16
    VarDec      转到状态 17
    FunDec      转到状态 18


State 7

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 8

   14 OptTag: ID .
   16 Tag: ID .

    LC        reduce using rule 14 (OptTag)
    $default  reduce using rule 16 (Tag)


State 9

   12 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 19


State 10

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  接受


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

    7 ExtDef: Specifier error . SEMI

    SEMI  shift, and go to state 20


State 14

   17 VarDec: ID .
   19 FunDec: ID . LP VarList RP
   20       | ID . LP RP

    LP  shift, and go to state 21

    $default  reduce using rule 17 (VarDec)


State 15

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 16

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 22


State 17

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   18 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 23
    LB     shift, and go to state 24

    $default  reduce using rule 8 (ExtDecList)


State 18

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 25

    CompSt  转到状态 26


State 19

   12 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 35 (DefList)

    Specifier        转到状态 27
    StructSpecifier  转到状态 7
    DefList          转到状态 28
    Def              转到状态 29


State 20

    7 ExtDef: Specifier error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 21

   19 FunDec: ID LP . VarList RP
   20       | ID LP . RP

    TYPE    shift, and go to state 1
    RP      shift, and go to state 30
    STRUCT  shift, and go to state 2

    Specifier        转到状态 31
    StructSpecifier  转到状态 7
    VarList          转到状态 32
    ParamDec         转到状态 33


State 22

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 23

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 34

    ExtDecList  转到状态 35
    VarDec      转到状态 17


State 24

   18 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 36


State 25

   24 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 35 (DefList)

    Specifier        转到状态 27
    StructSpecifier  转到状态 7
    DefList          转到状态 37
    Def              转到状态 29


State 26

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 27

   36 Def: Specifier . DecList SEMI
   37    | Specifier . error SEMI

    error  shift, and go to state 38
    ID     shift, and go to state 34

    VarDec   转到状态 39
    DecList  转到状态 40
    Dec      转到状态 41


State 28

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 42


State 29

   34 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 35 (DefList)

    Specifier        转到状态 27
    StructSpecifier  转到状态 7
    DefList          转到状态 43
    Def              转到状态 29


State 30

   20 FunDec: ID LP RP .

    $default  reduce using rule 20 (FunDec)


State 31

   23 ParamDec: Specifier . VarDec

    ID  shift, and go to state 34

    VarDec  转到状态 44


State 32

   19 FunDec: ID LP VarList . RP

    RP  shift, and go to state 45


State 33

   21 VarList: ParamDec . COMMA VarList
   22        | ParamDec .

    COMMA  shift, and go to state 46

    $default  reduce using rule 22 (VarList)


State 34

   17 VarDec: ID .

    $default  reduce using rule 17 (VarDec)


State 35

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 36

   18 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 47


State 37

   24 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 48
    INT     shift, and go to state 49
    FLOAT   shift, and go to state 50
    ID      shift, and go to state 51
    NOT     shift, and go to state 52
    MINUS   shift, and go to state 53
    LP      shift, and go to state 54
    LC      shift, and go to state 25
    RETURN  shift, and go to state 55
    IF      shift, and go to state 56
    WHILE   shift, and go to state 57

    RC  reduce using rule 26 (StmtList)

    CompSt    转到状态 58
    StmtList  转到状态 59
    Stmt      转到状态 60
    Exp       转到状态 61


State 38

   37 Def: Specifier error . SEMI

    SEMI  shift, and go to state 62


State 39

   18 VarDec: VarDec . LB INT RB
   40 Dec: VarDec .
   41    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 63
    LB        shift, and go to state 24

    $default  reduce using rule 40 (Dec)


State 40

   36 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 64


State 41

   38 DecList: Dec .
   39        | Dec . COMMA DecList

    COMMA  shift, and go to state 65

    $default  reduce using rule 38 (DecList)


State 42

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 43

   34 DefList: Def DefList .

    $default  reduce using rule 34 (DefList)


State 44

   18 VarDec: VarDec . LB INT RB
   23 ParamDec: Specifier VarDec .

    LB  shift, and go to state 24

    $default  reduce using rule 23 (ParamDec)


State 45

   19 FunDec: ID LP VarList RP .

    $default  reduce using rule 19 (FunDec)


State 46

   21 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        转到状态 31
    StructSpecifier  转到状态 7
    VarList          转到状态 66
    ParamDec         转到状态 33


State 47

   18 VarDec: VarDec LB INT RB .

    $default  reduce using rule 18 (VarDec)


State 48

   33 Stmt: error . SEMI

    SEMI  shift, and go to state 67


State 49

   58 Exp: INT .

    $default  reduce using rule 58 (Exp)


State 50

   59 Exp: FLOAT .

    $default  reduce using rule 59 (Exp)


State 51

   53 Exp: ID . LP Args RP
   54    | ID . LP RP
   57    | ID .

    LP  shift, and go to state 68

    $default  reduce using rule 57 (Exp)


State 52

   52 Exp: NOT . Exp

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51
    NOT    shift, and go to state 52
    MINUS  shift, and go to state 53
    LP     shift, and go to state 54

    Exp  转到状态 69


State 53

   51 Exp: MINUS . Exp

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51
    NOT    shift, and go to state 52
    MINUS  shift, and go to state 53
    LP     shift, and go to state 54

    Exp  转到状态 70


State 54

   50 Exp: LP . Exp RP

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51
    NOT    shift, and go to state 52
    MINUS  shift, and go to state 53
    LP     shift, and go to state 54

    Exp  转到状态 71


State 55

   29 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51
    NOT    shift, and go to state 52
    MINUS  shift, and go to state 53
    LP     shift, and go to state 54

    Exp  转到状态 72


State 56

   30 Stmt: IF . LP Exp RP Stmt
   31     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 73


State 57

   32 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 74


State 58

   28 Stmt: CompSt .

    $default  reduce using rule 28 (Stmt)


State 59

   24 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 75


State 60

   25 StmtList: Stmt . StmtList

    error   shift, and go to state 48
    INT     shift, and go to state 49
    FLOAT   shift, and go to state 50
    ID      shift, and go to state 51
    NOT     shift, and go to state 52
    MINUS   shift, and go to state 53
    LP      shift, and go to state 54
    LC      shift, and go to state 25
    RETURN  shift, and go to state 55
    IF      shift, and go to state 56
    WHILE   shift, and go to state 57

    RC  reduce using rule 26 (StmtList)

    CompSt    转到状态 58
    StmtList  转到状态 76
    Stmt      转到状态 60
    Exp       转到状态 61


State 61

   27 Stmt: Exp . SEMI
   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID

    SEMI      shift, and go to state 77
    AND       shift, and go to state 78
    OR        shift, and go to state 79
    ASSIGNOP  shift, and go to state 80
    RELOP     shift, and go to state 81
    DOT       shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    LB        shift, and go to state 87


State 62

   37 Def: Specifier error SEMI .

    $default  reduce using rule 37 (Def)


State 63

   41 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51
    NOT    shift, and go to state 52
    MINUS  shift, and go to state 53
    LP     shift, and go to state 54

    Exp  转到状态 88


State 64

   36 Def: Specifier DecList SEMI .

    $default  reduce using rule 36 (Def)


State 65

   39 DecList: Dec COMMA . DecList

    ID  shift, and go to state 34

    VarDec   转到状态 39
    DecList  转到状态 89
    Dec      转到状态 41


State 66

   21 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 21 (VarList)


State 67

   33 Stmt: error SEMI .

    $default  reduce using rule 33 (Stmt)


State 68

   53 Exp: ID LP . Args RP
   54    | ID LP . RP

    error  shift, and go to state 90
    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51
    NOT    shift, and go to state 52
    MINUS  shift, and go to state 53
    LP     shift, and go to state 54
    RP     shift, and go to state 91

    Exp   转到状态 92
    Args  转到状态 93


State 69

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   52    | NOT Exp .
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID

    DOT  shift, and go to state 82
    LB   shift, and go to state 87

    $default  reduce using rule 52 (Exp)


State 70

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   51    | MINUS Exp .
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID

    DOT   shift, and go to state 82
    STAR  shift, and go to state 85
    DIV   shift, and go to state 86
    LB    shift, and go to state 87

    $default  reduce using rule 51 (Exp)


State 71

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   50    | LP Exp . RP
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID

    AND       shift, and go to state 78
    OR        shift, and go to state 79
    ASSIGNOP  shift, and go to state 80
    RELOP     shift, and go to state 81
    DOT       shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    RP        shift, and go to state 94
    LB        shift, and go to state 87


State 72

   29 Stmt: RETURN Exp . SEMI
   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID

    SEMI      shift, and go to state 95
    AND       shift, and go to state 78
    OR        shift, and go to state 79
    ASSIGNOP  shift, and go to state 80
    RELOP     shift, and go to state 81
    DOT       shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    LB        shift, and go to state 87


State 73

   30 Stmt: IF LP . Exp RP Stmt
   31     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51
    NOT    shift, and go to state 52
    MINUS  shift, and go to state 53
    LP     shift, and go to state 54

    Exp  转到状态 96


State 74

   32 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51
    NOT    shift, and go to state 52
    MINUS  shift, and go to state 53
    LP     shift, and go to state 54

    Exp  转到状态 97


State 75

   24 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 24 (CompSt)


State 76

   25 StmtList: Stmt StmtList .

    $default  reduce using rule 25 (StmtList)


State 77

   27 Stmt: Exp SEMI .

    $default  reduce using rule 27 (Stmt)


State 78

   43 Exp: Exp AND . Exp

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51
    NOT    shift, and go to state 52
    MINUS  shift, and go to state 53
    LP     shift, and go to state 54

    Exp  转到状态 98


State 79

   44 Exp: Exp OR . Exp

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51
    NOT    shift, and go to state 52
    MINUS  shift, and go to state 53
    LP     shift, and go to state 54

    Exp  转到状态 99


State 80

   42 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51
    NOT    shift, and go to state 52
    MINUS  shift, and go to state 53
    LP     shift, and go to state 54

    Exp  转到状态 100


State 81

   45 Exp: Exp RELOP . Exp

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51
    NOT    shift, and go to state 52
    MINUS  shift, and go to state 53
    LP     shift, and go to state 54

    Exp  转到状态 101


State 82

   56 Exp: Exp DOT . ID

    ID  shift, and go to state 102


State 83

   46 Exp: Exp PLUS . Exp

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51
    NOT    shift, and go to state 52
    MINUS  shift, and go to state 53
    LP     shift, and go to state 54

    Exp  转到状态 103


State 84

   47 Exp: Exp MINUS . Exp

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51
    NOT    shift, and go to state 52
    MINUS  shift, and go to state 53
    LP     shift, and go to state 54

    Exp  转到状态 104


State 85

   48 Exp: Exp STAR . Exp

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51
    NOT    shift, and go to state 52
    MINUS  shift, and go to state 53
    LP     shift, and go to state 54

    Exp  转到状态 105


State 86

   49 Exp: Exp DIV . Exp

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51
    NOT    shift, and go to state 52
    MINUS  shift, and go to state 53
    LP     shift, and go to state 54

    Exp  转到状态 106


State 87

   55 Exp: Exp LB . Exp RB

    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    ID     shift, and go to state 51
    NOT    shift, and go to state 52
    MINUS  shift, and go to state 53
    LP     shift, and go to state 54

    Exp  转到状态 107


State 88

   41 Dec: VarDec ASSIGNOP Exp .
   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID

    AND       shift, and go to state 78
    OR        shift, and go to state 79
    ASSIGNOP  shift, and go to state 80
    RELOP     shift, and go to state 81
    DOT       shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    LB        shift, and go to state 87

    $default  reduce using rule 41 (Dec)


State 89

   39 DecList: Dec COMMA DecList .

    $default  reduce using rule 39 (DecList)


State 90

   62 Args: error . COMMA

    COMMA  shift, and go to state 108


State 91

   54 Exp: ID LP RP .

    $default  reduce using rule 54 (Exp)


State 92

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID
   60 Args: Exp . COMMA Args
   61     | Exp .

    COMMA     shift, and go to state 109
    AND       shift, and go to state 78
    OR        shift, and go to state 79
    ASSIGNOP  shift, and go to state 80
    RELOP     shift, and go to state 81
    DOT       shift, and go to state 82
    PLUS      shift, and go to state 83
    MINUS     shift, and go to state 84
    STAR      shift, and go to state 85
    DIV       shift, and go to state 86
    LB        shift, and go to state 87

    $default  reduce using rule 61 (Args)


State 93

   53 Exp: ID LP Args . RP

    RP  shift, and go to state 110


State 94

   50 Exp: LP Exp RP .

    $default  reduce using rule 50 (Exp)


State 95

   29 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 29 (Stmt)


State 96

   30 Stmt: IF LP Exp . RP Stmt
   31     | IF LP Exp . RP Stmt ELSE Stmt
   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID
